# HomeSim

./: CMakeLists.txt  Prompt.cpp  Prompt.h  Simulador.cpp  Simulador.h  Terminal.h  curses.h  main.cpp  package.json  readme.md
Habitacao/: Comando.cpp  Comando.h  Habitacao.cpp  Habitacao.h  Propriedade.cpp  Propriedade.h  Propriedades.cpp  Propriedades.h  Zona.cpp  Zona.h
Habitacao/Componentes/: Aparelho.cpp  Aparelho.h  Componente.cpp  Componente.h  Processador.cpp  Processador.h  Regra.cpp  Regra.h  Sensor.cpp  Sensor.h
tests/: Zona1.txt  fill4x4.txt  main.txt
